# SpikeNet2

./: .gitignore  continurous.py  pyproject.toml  train_initial_model.py  transfer_data.py
